fixed about page overflow

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ figure {
 
 .title {
     display: flex;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
 }
 
@@ -193,7 +193,7 @@ figure {
 
 .about-block {
     display: block;
-    width: 100vw;
+    width: 100%;
     margin-bottom: 5rem;
 }
 
@@ -235,7 +235,7 @@ figure {
 footer {
     display: flex;
     border-top: 2px solid var(--light-gray);
-    padding: 2rem 2.5rem;
+    padding: 1.5rem 2.5rem;
     text-align: center;
     justify-content: space-between;
     align-items: center;
